--- a/flex/src/components/Aside/styles.css
+++ b/flex/src/components/Aside/styles.css
@@ -10,10 +10,16 @@
     flex-direction: column;
     background: blue;
 }
+.Aside-formGrid form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;    
+}
 .Aside-formGrid h2{
     color: #fff;
 }
 .Aside-formGrid input{
+    width: 100%;
     font-weight: 600;
     border: none;
     height: 48px;
@@ -26,6 +32,7 @@
     outline-color: #001e32;
 }
 .Aside-formGrid button{
+    width: 100%;
     font-family: Montserrat, sans-serif;
     font-weight: 600;
     font-size: 1.2rem;
@@ -42,4 +49,12 @@
     background: #fff;
     border-color: #fff;
     color: #001e32;
+}
+@media (max-width: 1040px){
+    .Aside-formGrid{  
+        align-items: center;
+    }    
+    .Aside-formGrid form{
+        max-width: 600px;  
+    }   
 }
